name:                scheme
version:             0.1.0.1
synopsis:            Minimal interpreter for Scheme
homepage:            https://github.com/calintat/Scheme
license:             BSD3
license-file:        LICENSE
author:              Calin Tataru
maintainer:          calintat@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable scheme
  main-is:             Main.hs
  build-depends:       base,
                       mtl,
                       haskeline,
                       array,
                       parsec,
                       include-file,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/calintat/Scheme
